Final BigQuery schema and integer fixes